--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Pdfium.Net.SDK" version="3.34.2704" targetFramework="net472" />
+  <package id="Pdfium.Net.SDK" version="4.22.2704" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
 </packages>
