--- a/Pdf.WpfPubl.csproj
+++ b/Pdf.WpfPubl.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="MSBuildToolsReadSuo">
+  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.props" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,6 +39,7 @@
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Debug\Patagames.Pdf.Wpf.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
@@ -48,6 +50,7 @@
     <LangVersion>latest</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Release\Patagames.Pdf.Wpf.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Patagames.Pdf, Version=4.19.15.472, Culture=neutral, PublicKeyToken=60fd6cf9b15941cf, processorArchitecture=MSIL">
@@ -140,13 +143,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Patagames.Pdf.Wpf.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Print\PrintProgress.xaml">
@@ -200,6 +203,14 @@
     </ItemGroup>
     <Exec Command="&quot;%(NuGetExe.FullPath)&quot; pack $(AssemblyName).nuspec -Version @(VersionNumber) -Properties Configuration=$(Configuration) -OutputDirectory $(SolutionDir)releases\nupkg -BasePath $(OutDir)" />
   </Target>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.props'))" />
+    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.targets'))" />
+  </Target>
+  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.targets" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.1.6\build\MSBuild.Tools.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
