--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSBuild.Tools" version="0.2.38" targetFramework="net472" />
+  <package id="MSBuild.Tools" version="0.2.40" targetFramework="net472" developmentDependency="true" />
   <package id="Pdfium.Net.SDK" version="4.22.2704" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
