--- a/SuperMemoAssistant.Plugins.PDF.WPF.csproj
+++ b/SuperMemoAssistant.Plugins.PDF.WPF.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.props" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.props')" />
+  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.props" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -29,28 +29,6 @@
     <AssemblyInfoVersionSettings>None.None.None.None</AssemblyInfoVersionSettings>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>latest</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\Patagames.Pdf.Wpf.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>latest</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Release\Patagames.Pdf.Wpf.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Patagames.Pdf, Version=4.19.15.472, Culture=neutral, PublicKeyToken=60fd6cf9b15941cf, processorArchitecture=MSIL">
@@ -143,6 +121,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Directory.Build.targets" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -207,10 +186,10 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.props'))" />
-    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.targets'))" />
+    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.props'))" />
+    <Error Condition="!Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.targets'))" />
   </Target>
-  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.targets" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.41\build\MSBuild.Tools.targets')" />
+  <Import Project="..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.targets" Condition="Exists('..\..\..\..\..\packages\MSBuild.Tools.0.2.60\build\MSBuild.Tools.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
