--- a/SuperMemoAssistant.Plugins.PDF.WPF.csproj
+++ b/SuperMemoAssistant.Plugins.PDF.WPF.csproj
@@ -7,6 +7,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{380A4F46-413D-49B4-884F-21C7683F093C}</ProjectGuid>
     <OutputType>library</OutputType>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Patagames.Pdf.Net.Controls.Wpf</RootNamespace>
     <AssemblyName>Patagames.Pdf.Wpf</AssemblyName>
@@ -16,6 +17,7 @@
     <WarningLevel>4</WarningLevel>
     <AssemblyVersion>1.0.2716</AssemblyVersion>
     <TargetFrameworkProfile />
+    <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
     <ShouldCreateLogs>True</ShouldCreateLogs>
     <AdvancedSettingsExpanded>True</AdvancedSettingsExpanded>
     <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
